# game_project

./: Cargo.toml  config.toml  todo.md
assets/maps/: map.ase  map.json  tileset.ase
assets/sprites/final/birdenemy/: meta.json
assets/sprites/final/birdenemy/fly/: animation.json
assets/sprites/final/player/: meta.json
assets/sprites/final/player/jump/: animation.json
assets/sprites/nonfinal/: spritesheet.ase
core/: Cargo.toml
core/src/: config.rs  lib.rs  transform.rs
src/: animator.rs  eventhandler.rs  gamestate.rs  main.rs  physics.rs  prelude.rs  states.rs  utilities.rs  window.rs
src/ecs/: mod.rs  runner.rs  storage.rs
src/entity/: birdenemy.rs  enemy.rs  health.rs  mod.rs
src/game/: cannon.rs  hud.rs  map.rs  mod.rs  particles.rs
src/player/: animation.rs  controller.rs  mod.rs  state.rs
