[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "./core", package = "project_core" }

piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
fps_counter = "2.0.0"

hecs = "0.7.6"
rayon = "1.5.1"

rand = "0.8.5"
glam = "0.20.2"
num = "0.4.0"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

gridmapper_loader = "0.1.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3