[package]
name = "project_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
num = "0.4.0"
toml = "0.5.8"
glam = "0.20.2"